<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layouts_background"
    tools:context=".UI.LoginActivity">

    <LinearLayout
        android:id="@+id/layout_image_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_80sdp"
        android:layout_marginBottom="@dimen/_22sdp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_gravity="center"
            android:src="@drawable/app_icon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_sing_in_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_image_logo"
        android:layout_marginBottom="108dp"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout"
            android:textColorHint="#d9e5f3">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_login_name"
                style="@style/TextInputEditText"
                android:drawableStart="@drawable/ic_name_outline_black_24dp"
                android:drawableLeft="@drawable/ic_name_outline_black_24dp"
                android:hint="@string/name" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/textColor">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_login_password"
                style="@style/TextInputEditText"
                android:drawableStart="@drawable/ic_password_outline_black_24dp"
                android:drawableLeft="@drawable/ic_password_outline_black_24dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_20sdp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_60sdp"
        android:paddingRight="@dimen/_60sdp">

        <TextView
            android:id="@+id/text_login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/_50sdp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:letterSpacing="0.2"
            android:padding="@dimen/_16sdp"
            android:text="@string/login"
            android:textColor="#d9e5f3"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_login_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:text="@string/login_create_account"
            android:textColor="#d9e5f3" />
    </LinearLayout>

</RelativeLayout>